[package]
name = "guissh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["advanced", "image"] }
ssh2 = "0.9.4"
tokio = { version = "1.37.0", features = ["full"] }

